--- a/tmc-cd/kustomization.yaml
+++ b/tmc-cd/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- cluster-name-secret.yaml
-- cd-resources.yaml
+- base
 replacements:
 - source:
     kind: Deployment
