--- a/tmc-cd/kustomization.yaml
+++ b/tmc-cd/kustomization.yaml
@@ -1,11 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- base
-replacements:
-- source:
-    kind: Deployment
-    fieldPath: metadata.name
-  targets:
-  - select:
-      name: my-resource
+- cluster-name-secret.yaml
+- cd-resources.yaml
