--- a/tmc-cd/repo.yaml
+++ b/tmc-cd/repo.yaml
@@ -8,5 +8,5 @@ spec:
     git:
       url: https://github.com/cdelashmutt-pivotal/demo-clusters
       ref: origin/main
-      subPath: packagerepo/packages
+      subPath: packagerepo
       lfsSkipSmudge: true
