--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/roles.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/roles.yaml
@@ -9,6 +9,6 @@ spec:
     refName: external-dns.roles.grogscave.net
     versionSelection:
       constraints: ">=1.0.0"
-  values:
-  - secretRef:
-      name: external-dns-values
+#  values:
+#  - secretRef:
+#      name: external-dns-values
