--- a/packagerepo/packages/external-dns/1.0.0.yml
+++ b/packagerepo/packages/external-dns/1.0.0.yml
@@ -16,7 +16,10 @@ spec:
           ref: origin/main
           subPath: packages/external-dns
       template:
-      - ytt: {}
+      - ytt:
+          paths:
+          - "upstream"
+          - "overlays"
       - kbld:
           paths:
           - ".imgpkg/images.yml"
