--- a/packages/external-dns/overlays/namespace.yaml
+++ b/packages/external-dns/overlays/namespace.yaml
@@ -1,4 +1,6 @@
+#@ load("@ytt:data", "data")
+---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: external-dns
+  name: #@ data.values.namespace
