--- a/vendir.yml
+++ b/vendir.yml
@@ -1,9 +1,9 @@
 apiVersion: vendir.k14s.io/v1alpha1
 kind: Config
 directories:
-- path: packages/external-dns
+- path: packages/external-dns/upstream
   contents:
-  - path: upstream
+  - path: .
     git:
       url: https://github.com/kubernetes-sigs/external-dns
       ref: v0.13.5
