Add provider aws and basic config

--- a/packagerepo/packages/external-dns/1.0.0.yml
+++ b/packagerepo/packages/external-dns/1.0.0.yml
@@ -21,6 +21,21 @@ spec:
         namespace:
           type: string
           default: external-dns
+        provider:
+          type: string
+          default: aws
+          enum:
+          - aws
+        domain:
+          type: string
+        owner_id:
+          type: string
+        aws:
+          type: object
+          properties:
+            role_arn:
+              type: string
+
   template:
     spec:
       fetch:
