--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/roles.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/roles.yaml
@@ -1,14 +1,28 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: external-dns-values
+  namespace: tanzu-continuousdelivery-resources
+type: Opaque
+stringData:
+  values.yaml: |
+    domain: "aws-work.grogscave.net"
+    owner_id: "cdd-demo"
+    aws:
+      role_arn: "arn:aws:iam::537807987484:role/cdd-demo-external-dns-external-dns"
+
 ---
 apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
 metadata:
   name: external-dns
+  namespace: tanzu-continuousdelivery-resources
 spec:
   serviceAccountName: tanzu-cd
   packageRef:
     refName: external-dns.roles.grogscave.net
     versionSelection:
       constraints: ">=1.0.0"
-#  values:
-#  - secretRef:
-#      name: external-dns-values
+  values:
+  - secretRef:
+      name: external-dns-values
