--- a/tmc-cd/cd-resources.yaml
+++ b/tmc-cd/cd-resources.yaml
@@ -49,7 +49,7 @@ spec:
                 subPath: #@ "/clusters/" + data.values.cluster_name
                 ref: origin/main
                 lfsSkipSmudge: true
-            #! template:
+            template:
             #! - sops:
             #!     age:
             #!       privateKeysSecretRef:
