Update to tap subpath

--- a/packagerepo/packages/tap/1.0.0.yml
+++ b/packagerepo/packages/tap/1.0.0.yml
@@ -36,7 +36,7 @@ spec:
       - git:
           url: https://github.com/cdelashmutt-pivotal/demo-clusters
           ref: origin/main
-          subPath: packages/external-dns
+          subPath: packages/tap
       template:
       - ytt:
           paths:
