--- a/tmc-cd/cd-resources.yaml
+++ b/tmc-cd/cd-resources.yaml
@@ -33,6 +33,37 @@ spec:
   fetch:
   - inline:
       paths:
+        eso.yaml: |
+          ---
+          apiVersion: source.toolkit.fluxcd.io/v1beta2
+          kind: HelmRepository
+          metadata:
+            name: external-secrets
+            namespace: tanzu-continuousdelivery-resources
+          spec:
+            interval: 5m0s
+            url: https://charts.external-secrets.io
+          ---
+          apiVersion: helm.toolkit.fluxcd.io/v2beta1
+          kind: HelmRelease
+          metadata:
+            name: external-secrets
+            namespace: tanzu-continuousdelivery-resources
+          spec:
+            interval: 1m
+            chart:
+              spec:
+                chart: external-secrets
+                sourceRef:
+                  kind: HelmRepository
+                  name: external-secrets
+                  namespace: tanzu-continuousdelivery-resources
+                interval: 1m
+                targetNamespace: external-secrets
+            install:
+              crds: CreateReplace
+            upgrade:
+              crds: CreateReplace
         cluster-app.yaml: |
           #@ load("@ytt:data", "data")
           ---
