--- a/tmc-cd/cd-resources.yaml
+++ b/tmc-cd/cd-resources.yaml
@@ -75,7 +75,7 @@ spec:
           kind: ServiceAccount
           metadata:
             annotations:
-              eks.amazonaws.com/role-arn: arn:aws:iam::123456789012:role/team-a
+              eks.amazonaws.com/role-arn: arn:aws:iam::537807987484:role/cdd-demo-eso-aws-tanzu-continuousdelivery-resources
             name: eso-aws
             namespace: tanzu-continuousdelivery-resources
           ---
