--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
@@ -9,8 +9,8 @@ stringData:
   values.yaml: |
     tap_install:
       version:
-        package_repo_bundle_tag: ">=1.6.0 <1.7.0"
-        package_version: ">=1.6.0 <1.7.0"
+        package_repo_bundle_tag: "1.6.2"
+        package_version: "1.6.2"
       package_repository:
         oci_repository: registry.tanzu.vmware.com/tanzu-application-platform/tap-packages
       values:
