--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
@@ -17,6 +17,7 @@ stringData:
         excluded_packages:
           - learningcenter.tanzu.vmware.com
           - workshops.learningcenter.tanzu.vmware.com
+          - fluxcd.source.controller.tanzu.vmware.com
         ceip_policy_disclosed: true
         shared:
           ingress_domain: "aws-work.grogscave.net"
