--- a/packages/tap/config/wildcard-cert.yaml
+++ b/packages/tap/config/wildcard-cert.yaml
@@ -1,7 +1,12 @@
+---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-contour-cluster-issuer
+  annotations:
+    kapp.k14s.io/change-group: issuer
+    kapp.k14s.io/change-rule.0: "upsert after upserting pkgi"
+    kapp.k14s.io/change-rule.1: "delete before deleting pkgi"
 spec:
   acme:
     email: cdelashmutt@vmware.com
@@ -19,6 +24,10 @@ kind: Certificate
 metadata:
   name: default-cert
   namespace: default
+  annotations:
+    kapp.k14s.io/change-group: cert
+    kapp.k14s.io/change-rule.0: "upsert after upserting issuer"
+    kapp.k14s.io/change-rule.1: "delete before deleting issuer"
 spec:
   commonName: "*.aws-work.grogscave.net"
   dnsNames:
@@ -42,6 +51,9 @@ kind: SecretExport
 metadata:
   name: default-cert
   namespace: default
+  annotations:
+    kapp.k14s.io/change-rule.0: "upsert after upserting cert"
+    kapp.k14s.io/change-rule.1: "delete before deleting cert"
 spec:
   toNamespaces:
   - '*'
@@ -51,6 +63,9 @@ kind: TLSCertificateDelegation
 metadata:
   name: default-cert
   namespace: default
+  annotations:
+    kapp.k14s.io/change-rule.0: "upsert after upserting cert"
+    kapp.k14s.io/change-rule.1: "delete before deleting cert"
 spec:
   delegations:
   - secretName: default-cert
