--- a/packages/tap/config/pkgi.yaml
+++ b/packages/tap/config/pkgi.yaml
@@ -8,7 +8,7 @@ metadata:
 type: Opaque
 stringData:
   order-namespace-provisioner.yaml: |
-    #@ load("@ytt/overlay", "overlay")
+    #@ load("@ytt:overlay", "overlay")
     #@overlay/match by=overlay.subset({"kind": "PackageInstall", "metadata": {"name": "namespace-provisioner"}})
     ---
     metadata:
