--- a/packages/tap/config/cert-manager-overlay.yaml
+++ b/packages/tap/config/cert-manager-overlay.yaml
@@ -4,6 +4,10 @@ kind: Secret
 metadata:
   name: cert-manager-overlay
   namespace: tap-install
+  annotations:
+    kapp.k14s.io/change-rule.0: "upsert before upserting pkgi"
+    kapp.k14s.io/change-rule.1: "delete after deleting pkgi"
+
 type: Opaque
 stringData:
   overlay.yaml: |
