--- a/packages/tap/config/pkgi.yaml
+++ b/packages/tap/config/pkgi.yaml
@@ -5,6 +5,9 @@ kind: Secret
 metadata:
   name: tap-overlay
   namespace: tap-install
+  annotations:
+    kapp.k14s.io/change-rule.0: "upsert before upserting pkgi"
+    kapp.k14s.io/change-rule.1: "delete after deleting pkgi"
 type: Opaque
 stringData:
   order-namespace-provisioner.yaml: |
