--- a/packages/tap/config/tap-gui-overlay.yaml
+++ b/packages/tap/config/tap-gui-overlay.yaml
@@ -4,6 +4,9 @@ kind: Secret
 metadata:
   name: tap-gui-overlay
   namespace: tap-install
+  annotations:
+    kapp.k14s.io/change-rule.0: "upsert before upserting pkgi"
+    kapp.k14s.io/change-rule.1: "delete after deleting pkgi"
 type: Opaque
 stringData:
   overlay.yaml: |
