--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
@@ -169,6 +169,8 @@ kind: PackageInstall
 metadata:
   name: tap
   namespace: tanzu-continuousdelivery-resources
+  annotations:
+    kapp.k14s.io/change-group: tap
 spec:
   serviceAccountName: tanzu-cd
   packageRef:
