--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
@@ -12,12 +12,15 @@ type: Opaque
 stringData:
   values.yaml: |
     tap_install:
+      version:
+        package_repo_bundle_tag: "1.7.0-build.84"
+        package_version: "1.7.0-build.84"
       values:
         shared:
           ingress_domain: "aws-work.grogscave.net"
           image_registry:
             project_path: "gcr.io/pa-cdelashmutt/cdd-demo-tap/supply-chain"
-          kubernetes_version: "1.25.9"
+          kubernetes_version: "1.27"
         local_source_proxy:
           repository: gcr.io/pa-cdelashmutt/cdd-demo-tap/source
         contour:
