--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
@@ -33,6 +33,16 @@ stringData:
             auth:
               environment: development
         namespace_provisioner:
+          gitops_install:
+            ref: origin/main
+            subPath: namespace-provisioner/cdd-demo/namespaces
+            url: https://github.com/cdelashmutt-pivotal/demo-clusters
+          additional_sources:
+            - git:
+                ref: origin/main
+                subPath: namespace-provisioner/cdd-demo/namespaces
+                url: https://github.com/cdelashmutt-pivotal/demo-clusters
+              path: _ytt_lib/testing-scanning-supplychain
           default_parameters:
             supply_chain_service_account:
               secrets:
