--- a/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
+++ b/clusters/eks.cdd-gloudgate.us-east-2.cdd-demo/tap-role.yaml
@@ -36,7 +36,17 @@ stringData:
           default_parameters:
             supply_chain_service_account:
               secrets:
-              - git-auth        
+              - git-auth
+        package_overlays:
+        - name: tap-gui
+          secrets:
+          - name: tdp-app-image-overlay-secret
+        - name: cert-manager
+          secrets:
+          - name: cert-manager-overlay
+        - name: tap-gui
+          secrets:
+          - name: tap-gui-overlay
 ---
 apiVersion: packaging.carvel.dev/v1alpha1
 kind: PackageInstall
