--- a/namespace-provisioner/cdd-demo/testing-scanning-supplychain/scanpolicy-grype.yaml
+++ b/namespace-provisioner/cdd-demo/testing-scanning-supplychain/scanpolicy-grype.yaml
@@ -34,7 +34,7 @@ spec:
   regoFile: |
     package main
     # Accepted Values: "Critical", "High", "Medium", "Low", "Negligible", "UnknownSeverity"
-    notAllowedSeverities := ["Critical", "High", "UnknownSeverity"]
+    notAllowedSeverities := ["UnknownSeverity"]
     ignoreCves := ["GHSA-67hx-6x53-jw92", "CVE-2023-44487", "CVE-2016-7954", "GHSA-36jr-mh4h-2g58", "GHSA-ww39-953v-wcq6", "GHSA-xvch-5gv4-984h", "GHSA-2jcg-qqmg-46q6", "GHSA-6xwr-q98w-rvg7", "CVE-2023-44487", "GHSA-36p3-wjmg-h94x", "CVE-2023-21930", "GHSA-mjmj-j48q-9wg2", "CVE-2023-35116", "CVE-2023-33126", "CVE-2023-33128", "CVE-2023-33135", "GHSA-555c-2p6r-68mm", "GHSA-jx7q-xxmw-44vf"]
     contains(array, elem) = true {
       array[_] = elem
